--- a/src/components/main/bigimage/bigimage.css
+++ b/src/components/main/bigimage/bigimage.css
@@ -18,7 +18,7 @@
     justify-content: center;
     font-size : 2rem;
 }
-img{
+img.big-image{
     position : absolute;
     width: 100%;
     height : 100vh;
